Fixing mac svg alignment

--- a/src/plugins/extra/backgrounds/Unsplash/Unsplash.sass
+++ b/src/plugins/extra/backgrounds/Unsplash/Unsplash.sass
@@ -18,6 +18,3 @@
 
             &:hover
                 text-decoration: underline
-
-        i
-            line-height: 0
