--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,6 +32,7 @@ h4
 
 i
     vertical-align: middle
+    line-height: 1
 
     svg
         height: 1em
